# godel

./: .gitignore
godel_calibration_config/launch/: blending_calibration.launch  irb2400_calib_moveit_planning_execution.launch  irb2400_calib_planning_context.launch  irb2600_calib_moveit_planning_execution.launch  irb2600_calib_planning_context.launch  irb6640_calib_moveit_planning_execution.launch
godel_calibration_config/urdf/: calib_abb_blending_eff_macro.xacro  calib_irb2400_workspace.xacro  calib_irb2600_workspace.xacro  calib_irb6640_workspace.xacro  calib_kinect2_sensor_macro.xacro
godel_calibration_config/yaml/: 2400_caljob.yaml  2600_caljob.yaml  2600_caljob2.yaml  2600_caljob3.yaml  godel_mutable_joint_states.yaml  godel_mutable_joint_states.yamlnew  kinect2_camera_def.yaml
godel_msgs/: CMakeLists.txt
godel_msgs/msg/: ProcessPlan.msg
godel_msgs/srv/: BlendProcessExecution.srv  KeyenceProcessExecution.srv  SelectMotionPlan.srv  TrajectoryPlanning.srv
godel_path_execution/: CMakeLists.txt  package.xml  path_execution_service.cpp  path_execution_service.h  path_execution_service_node.cpp
godel_path_execution/include/godel_path_execution/: path_execution_service.h
godel_path_execution/src/: path_execution_service.cpp
godel_path_planning/include/godel_path_planning/: trajectory_planning.h  trajectory_utils.h
godel_path_planning/src/: trajectory_planning.cpp  trajectory_planning_node.cpp  trajectory_utils.cpp
godel_plugins/src/widgets/: robot_blending_widget.cpp
godel_process_execution/: CMakeLists.txt  package.xml
godel_process_execution/include/godel_process_execution/: abb_blend_process_service.h  keyence_process_service.h  motoman_blend_process_service.h
godel_process_execution/src/: abb_blend_process_service.cpp  abb_blend_process_service_node.cpp  keyence_process_service.cpp  keyence_process_service_node.cpp  motoman_blend_process_service.cpp  motoman_blend_process_service_node.cpp  process_utils.cpp  process_utils.h  rapid_data_structures.h  rapid_emitter.cpp  rapid_emitter.h
godel_process_path_generation/: CMakeLists.txt  package.xml
godel_process_planning/: CMakeLists.txt  package.xml
godel_process_planning/include/godel_process_planning/: godel_process_planning.h
godel_process_planning/launch/: process_planning.launch
godel_process_planning/src/: blend_process_planning.cpp  common_utils.cpp  common_utils.h  godel_process_planning.cpp  godel_process_planning_node.cpp  keyence_process_planning.cpp  trajectory_utils.h
godel_robot_config/meshes/collision/: blending_eff.stl
godel_robot_config/urdf/: abb_blending_eff_macro.xacro  blending_eff_macro.xacro  irb2400_workspace.xacro  irb2600_workspace.xacro  irb6640_workspace.xacro  kinect2_sensor_macro.xacro
godel_robots/blending_end_effector/urdf/: blending_eff_macro.xacro  pykdl.py
godel_robots/godel_robot_resources/: CMakeLists.txt  package.xml
godel_robots/godel_robot_resources/launch/: blending_calibration.launch  irb2600_blending.launch
godel_robots/godel_robot_resources/urdf/: calib_kinect2_sensor_macro.xacro  kinect2_sensor_macro.xacro
godel_robots/ur/godel_ur5/godel_ur5_support/: CMakeLists.txt  package.xml
godel_robots/ur/godel_ur5/godel_ur5_support/config/: point_cloud_descriptions.yaml
godel_robots/ur/godel_ur5/godel_ur5_support/launch/: ur5_blending.launch
godel_robots/ur/godel_ur5/godel_ur5_support/urdf/: blending_eff_macro.xacro  ur5_workspace.xacro
godel_robots/ur/godel_ur5/godel_ur5_support/yaml/: godel_mutable_joint_states.yamlnew
godel_scan_analysis/src/: scan_roughness_scoring.cpp
godel_simple_gui/: CMakeLists.txt  package.xml
godel_simple_gui/include/godel_simple_gui/: options_submenu.h
godel_simple_gui/src/: blending_widget.cpp  options_submenu.cpp  parameter_window_base.cpp
godel_simple_gui/src/options/: scan_tool_configuration.cpp
godel_simple_gui/src/states/: error_state.cpp  executing_state.cpp  planning_state.cpp  scan_teach_state.cpp  scanning_state.cpp  simulating_state.cpp  surface_select_state.cpp  wait_to_simulate_state.cpp
godel_surface_detection/: CMakeLists.txt
godel_surface_detection/config/irb2600/: point_cloud_descriptions.yaml
godel_surface_detection/config/sia20d/: point_cloud_descriptions.yaml
godel_surface_detection/launch/: irb2400_blending.launch  irb2600_blending.launch  irb6640_blending.launch  robot_scan.launch  sia20d_blending.launch  sia20d_blending_full.launch  sia20d_sensor_setup.launch
godel_surface_detection/rviz/: irb2400_blending.rviz  irb2600_blending.rviz  irb6640_blending.rviz  sia20d_blending.rviz
godel_surface_detection/src/nodes/: surface_segmentation_test_node.cpp
godel_surface_detection/src/scan/: macro_scan.cpp  profilimeter_scan.cpp  robot_scan (copy 1).cpp  robot_scan.cpp  robot_scan_joint_moves.cpp
godel_surface_detection/src/services/: blending_service_path_generation.cpp  surface_blending_service.cpp
ik_plugins/abb_irb2600_descartes/: package.xml
ik_plugins/irb2600_ikfast_manipulator_plugin/: update_ikfast_plugin.sh
ik_plugins/irb2600_ikfast_manipulator_plugin/src/: abb_irb2600_manipulator_ikfast_moveit_plugin.cpp  plugin_init.cpp  (+1 more)
keyence_ljv_description/urdf/: lj_v7080_macro.xacro
meshing_plugins/: CMakeLists.txt
meshing_plugins_base/: CMakeLists.txt
moveit_configurations/godel_irb2600_moveit_config/: .setup_assistant  package.xml
path_planning_plugins/: CMakeLists.txt
path_planning_plugins_base/: CMakeLists.txt
simulator_service/src/: simulator_service_node.cpp
(+155 files in other folders)
