<?xml version="1.0"?>
<package format="2">
  <name>godel_process_path_generation</name>
  <version>0.0.0</version>
  <description>
  The godel_process_path_generation package creates the high-level process path for surface blending.
  </description>

  <maintainer email="dpsolomon@gmail.com">Daniel Solomon</maintainer>
  <author email="dpsolomon@gmail.com">Daniel Solomon</author>
  <license>Apache2</license>
  <url type="website">https://github.com/ros-industrial-consortium/godel</url>

  <buildtool_depend>catkin</buildtool_depend>
  

  <!-- Message dependencies -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <depend>godel_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- ROS package dependencies -->
  <depend>eigen_conversions</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

</package>
